chore: update SCSS styles for personen component, adjust footer styles, and add card variables for dark mode

--- a/packages/skombase13/Configuration/Sets/SitePackage/settings.yaml
+++ b/packages/skombase13/Configuration/Sets/SitePackage/settings.yaml
@@ -27,7 +27,7 @@ page:
     cookieconsent:
       enable: false
     footernavigation:
-      navigationValue: '4, 5'
+      navigationValue: '7,8'
     navigation:
       type: top
       style: default
