chore: update configuration files to enhance development environment with debugging options and clarify coding principles

--- a/.env
+++ b/.env
@@ -7,6 +7,8 @@ SITE_BASE='https://leseohrendb.ddev.site/'
 # System
 TYPO3_TRUSTED_HOST_PATTERN='.*.*'
 TYPO3_DISPLAY_ERRORS='1'
+TYPO3_BE_DEBUG='1'
+TYPO3_FE_DEBUG='1'
 
 # Database Credentials
 TYPO3__DB__Connections__Default__dbname='db'
