chore: update Vite manifest and add new JavaScript and CSS assets for Datepicker and Main entry points

--- a/public/_assets/vite/.vite/manifest.json
+++ b/public/_assets/vite/.vite/manifest.json
@@ -17,7 +17,7 @@
     ]
   },
   "packages/leseohren/Resources/Private/Datepicker.entry.js": {
-    "file": "assets/Datepicker.entry-Cy11fV3R.js",
+    "file": "assets/Datepicker.entry-DKY_QDkk.js",
     "name": "Datepicker.entry",
     "src": "packages/leseohren/Resources/Private/Datepicker.entry.js",
     "isEntry": true,
@@ -35,12 +35,12 @@
     ]
   },
   "packages/skombase13/Resources/Private/Main.entry.js": {
-    "file": "assets/Main.entry-DRXor-tc.js",
+    "file": "assets/Main.entry-D_JjO5Rr.js",
     "name": "Main.entry",
     "src": "packages/skombase13/Resources/Private/Main.entry.js",
     "isEntry": true,
     "css": [
-      "assets/Main-CG7nxS8J.css"
+      "assets/Main-Iy81GDrA.css"
     ],
     "assets": [
       "assets/bootstrap-icons-BtvjY1KL.woff2",
